# systems-programming

./: README.md
01_daily_logs/: README.md
01_daily_logs/07-26/: 2026-07-09.md  2026-07-10.md  2026-07-13.md
02_linux_command_line/: README.md
02_linux_command_line/ch01/: notes.txt
02_linux_command_line/ch02/: notes.txt
02_linux_command_line/ch03/: notes.txt
03_cpp_basics/: README.md
03_cpp_basics/ch01/: ch_01.ipynb
03_cpp_basics/ch01/.ipynb_checkpoints/: ch_01-checkpoint.ipynb
04_computer_foundations/: README.md
05_projects/: README.md
05_projects/001_market_imbalance_calculator/: .gitignore  CMakeLists.txt  description.txt  main.cpp  run
06_mistakes/: README.md
06_resources/: README.md
